Resolve "Ajouter endpoints Green pour distinguer prod/hors prod"