@@ -6,6 +6,7 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
 
 import org.assertj.core.api.SoftAssertions;
@@ -14,6 +15,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.ResponseEntity;
@@ -22,9 +24,11 @@ import fr.insee.compas.client.OscarClient;
 import fr.insee.compas.client.view.VmOscarView;
 import fr.insee.compas.exception.CompasClientException;
 import fr.insee.compas.mapper.MetriqueVmMapper;
+import fr.insee.compas.model.compas.TableFaits;
 import fr.insee.compas.model.greenit.MetriqueVm;
 import fr.insee.compas.model.greenit.util.LectureCsvUtil;
 import fr.insee.compas.repository.TableFaitsRepository;
+import fr.insee.compas.util.ScoreUtils;
 
 @ExtendWith(MockitoExtension.class)
 class GreenItServiceMajTest {
@@ -43,7 +47,7 @@ class GreenItServiceMajTest {
 
     @BeforeEach
     void setup() {
-        final MetriqueVm metric =
+        final MetriqueVm metric1 =
                 MetriqueVm.builder()
                         .vm("pdsir4esli001")
                         .diskAllocated(LectureCsvUtil.process("154,83"))
@@ -54,8 +58,18 @@ class GreenItServiceMajTest {
                         .cpuMaxi(LectureCsvUtil.process("3,9"))
                         .conso(LectureCsvUtil.process("1,13"))
                         .build();
+        final MetriqueVm metric2 =
+                MetriqueVm.builder()
+                        .vm("pdsir4esli002")
+                        .diskAllocated(LectureCsvUtil.process("154,83"))
+                        .diskUsed(LectureCsvUtil.process("49,46"))
+                        .ramAllocated(LectureCsvUtil.process("4 788,75"))
+                        .ramMaxi(LectureCsvUtil.process("6 390,57"))
+                        .cpuAllocated(LectureCsvUtil.process("4"))
+                        .cpuMaxi(LectureCsvUtil.process("3,9"))
+                        .build();
 
-        metrics = List.of(metric);
+        metrics = metrics = Arrays.asList(metric1, metric2);
 
         greenItService =
                 spy(
@@ -68,7 +82,7 @@ class GreenItServiceMajTest {
         final List<VmOscarView> mockVms =
                 List.of(
                         VmOscarView.builder().idApplication(123).build(),
-                        VmOscarView.builder().idApplication(123).build());
+                        VmOscarView.builder().idApplication(124).build());
         Mockito.when(oscarClient.getAllVmOscar()).thenReturn(ResponseEntity.ok(mockVms));
 
         assertDoesNotThrow(() -> greenItService.miseAJourIndicateursGreenIT(LocalDate.now()));
@@ -108,5 +122,96 @@ class GreenItServiceMajTest {
                 .miseAJourIndicateursApplicationGreenIT(emptyList, LocalDate.now());
         verify(greenItService, times(1))
                 .miseAJourIndicateursModuleGreenIT(emptyList, LocalDate.now());
+    }
+
+    @Test
+    void testMiseAJourIndicateursModuleGreenIT_AvecListeVide_neFaitRien() {
+        List<VmOscarView> vmOscars = List.of();
+
+        greenItService.miseAJourIndicateursModuleGreenIT(vmOscars, LocalDate.now());
+        verify(tableFaitsRepository, Mockito.never()).save(Mockito.any());
+    }
+
+    @Test
+    void testMiseAJourIndicateursModuleGreenIT_GroupementParModule() {
+        // 2 modules différents : 10 et 20
+        VmOscarView vm1 =
+                VmOscarView.builder()
+                        .idModule(10)
+                        .idApplication(100)
+                        .plateforme("pd")
+                        .nom("vm1")
+                        .build();
+
+        VmOscarView vm2 =
+                VmOscarView.builder()
+                        .idModule(10)
+                        .idApplication(100)
+                        .plateforme("bt")
+                        .nom("vm2")
+                        .build();
+
+        VmOscarView vm3 =
+                VmOscarView.builder()
+                        .idModule(20)
+                        .idApplication(200)
+                        .plateforme("pd")
+                        .nom("vm3")
+                        .build();
+
+        List<VmOscarView> vmOscars = List.of(vm1, vm2, vm3);
+
+        LocalDate fileDate = LocalDate.of(2025, 1, 1);
+
+        try (MockedStatic<ScoreUtils> scoreUtilsMock = Mockito.mockStatic(ScoreUtils.class)) {
+
+            scoreUtilsMock
+                    .when(() -> ScoreUtils.isPlateformeProd(Mockito.anyString()))
+                    .thenReturn(true);
+
+            greenItService.miseAJourIndicateursModuleGreenIT(vmOscars, fileDate);
+        }
+
+        /* on 2 modules (10 et 20), on appelle 1 fois peuplerIndicateurs pour la prod et le global : donc 4 appels de la méthode
+         * on multiplie par 8 indicateurs,  ça fait 32 appels de save */
+        verify(tableFaitsRepository, times(32)).save(Mockito.any(TableFaits.class));
+    }
+
+    @Test
+    void testMiseAJourIndicateursModuleGreenIT_IgnoreLesVmSansModule() {
+        VmOscarView vmAvecModule =
+                VmOscarView.builder()
+                        .idModule(10)
+                        .idApplication(100)
+                        .plateforme("pd")
+                        .nom("vmAvecModule")
+                        .build();
+
+        VmOscarView vmSansModule =
+                VmOscarView.builder()
+                        .idModule(null)
+                        .idApplication(100)
+                        .plateforme("pd")
+                        .nom("vmSansModule")
+                        .build();
+
+        List<VmOscarView> vmOscars = List.of(vmAvecModule, vmSansModule);
+
+        LocalDate fileDate = LocalDate.of(2025, 1, 1);
+
+        try (MockedStatic<ScoreUtils> scoreUtilsMock = Mockito.mockStatic(ScoreUtils.class)) {
+
+            scoreUtilsMock
+                    .when(() -> ScoreUtils.isPlateformeProd(Mockito.anyString()))
+                    .thenReturn(true);
+
+            greenItService.miseAJourIndicateursModuleGreenIT(vmOscars, fileDate);
+        }
+
+        /*
+         * Ici il n’y a qu’un module : 10 on appelle 2 fois peuplerIndicateurs
+         * nb save() = 2 * 8 indicateurs = 16
+         */
+        verify(tableFaitsRepository, times(16)).save(Mockito.any(TableFaits.class));
     }
 }
